# sam32

./: ISA.md  JOURNAL.md  README.md
.github/workflows/: deploy.yml
CPU/: ALU.dig  BranchHandler.dig  CPU.dig  CU.dig  CU.v  IFU.dig  RegisterFile.dig
assembler/: .clang-format  CMakeLists.txt
assembler/include/sam32asm/: parser.hpp
assembler/src/: lexer.cpp  main.cpp  parser.cpp
hw/: .gitignore  sam32_cpu.xpr  xvhdl.pb
hw/sam32_cpu.gen/sources_1/ip/ddr/: ddr.dcp  ddr_sim_netlist.v  ddr_stub.v  ddr_xmdf.tcl
hw/sam32_cpu.gen/sources_1/ip/ddr/ddr/: mig.prj
hw/sam32_cpu.gen/sources_1/ip/ddr/ddr/example_design/par/: example_top.xdc
hw/sam32_cpu.gen/sources_1/ip/ddr/ddr/example_design/rtl/: example_top.v
hw/sam32_cpu.gen/sources_1/ip/ddr/ddr/example_design/sim/: xsim_files.prj
hw/sam32_cpu.gen/sources_1/ip/ddr/ddr/user_design/constraints/: ddr.xdc  ddr_ooc.xdc
hw/sam32_cpu.gen/sources_1/ip/ddr/ddr/user_design/rtl/: ddr.v  ddr_mig.v  ddr_mig_sim.v
hw/sam32_cpu.gen/sources_1/ip/ddr/ddr/user_design/rtl/ip_top/: mig_7series_v4_2_memc_ui_top_std.v
hw/sam32_cpu.srcs/sources_1/ip/ddr/: ddr.xci  mig_a.prj
hw/src/: address_decoder.sv  alu.sv  branch_handler.sv  clz.sv  control_unit.sv  csr_file.sv  cu.sv  pc_reg.sv  ram.sv  ram2ddrxadc.vhd  reg_32.sv  reg_file.sv  rom.sv  sam32_soc.sv  timer.sv
hw/tb/: address_decoder_tb.sv  alu_tb.sv  branch_handler_tb.sv  clz_tb.sv  control_unit_tb.sv  csr_file_tb.sv  cu_tb.sv  pc_reg_tb.sv  ram_tb.sv  reg_32_tb.sv  reg_file_tb.sv  rom_tb.sv  timer_tb.sv
toolchain/: CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  output.txt  program.asm  readbin.py  test_tokenize  vcpkg-configuration.json  vcpkg.json
toolchain/include/sam32/assembler/: compiler.hpp  lexer.hpp  parser.hpp
toolchain/include/sam32/emulator/: TextEditor.hpp  emulator.hpp  gui.hpp
toolchain/include/sam32/utils/: utils.hpp
toolchain/include/sam32asm/: compiler.hpp  lexer.hpp
toolchain/src/: compiler.cpp  main.cpp
toolchain/src/assembler/: compiler.cpp  lexer.cpp  parser.cpp
toolchain/src/cli/: main.cpp
toolchain/src/emulator/: ImGuiFileDialog.cpp  emulator.cpp  gui.cpp  texteditor.cpp
toolchain/src/utils/: utils.cpp
toolchain/src/web/: main.cpp
